--- a/home.html
+++ b/home.html
@@ -55,7 +55,7 @@
             <div class=" ">
               <div class="w-full items-center flex flex-col ">
                 <div class="flex items-center justify-center">
-                  <img class="h-10 w-auto" src="/Dashboard/image/logo.png" alt="ALC">
+                  <img class="h-10 w-auto" src="image/logo.png" alt="ALC">
                   <h2 class="text-center text-3xl leading-9 font-extrabold text-gray-900">ALC</h2>
                 </div>
                 <h1 class="text-4xl font-bold mt-2 mb-6">Helping you find your new home;<br>by simplifying the search.
