--- a/teachers.html
+++ b/teachers.html
@@ -1,225 +1,198 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
-  <link rel="stylesheet" href="src/output.css">
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <!-- Bootstrap CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+
+    <!--Bootstrap 5 icons CDN-->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
+
+    <title>ALC</title>
+
+    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="src/output.css">
 </head>
 
-
-
-<body class="bg-gray-200">
-  <div class="bg-gray-100">
-
-    <div class="h-screen flex overflow-hidden bg-gray-200">
-      <!-- Sidebar -->
-      <div
-        class="absolute z-50 bg-gray-800 text-white w-56 min-h-screen overflow-y-auto transition-transform transform -translate-x-full ease-in-out duration-300"
-        id="sidebar">
-        <!-- Your Sidebar Content -->
-        <div class="p-4">
-          <h1 class="text-2xl font-semibold">ALC</h1>
-          <ul class="mt-4">
-            <li class="mb-2"><a href="home.html" class="block hover:text-indigo-400">Home</a></li>
-            <li class="mb-2"><a href="courses.html" class="block hover:text-indigo-400">Courses</a></li>
-            <li class="mb-2"><a href="teachers.html" class="block hover:text-indigo-400">Teachers</a></li>
-            <li class="mb-2"><a href="information.html" class="block hover:text-indigo-400">Information</a></li>
-          </ul>
-        </div>
-      </div>
-
-      <!-- Content -->
-      <div class="flex-1 flex flex-col overflow-hidden">
-        <!-- Navbar -->
-        <div class="bg-white shadow">
-          <div class="container mx-auto">
-            <div class="flex justify-between items-center py-4 px-2">
-              <!-- Add Button -->
-              <button class="bg-blue-500 hover:bg-blue-600 text-white font-bold py-2 px-4 edit-btn rounded-full"
-                id="open-modal">Add</button>
-
-              <h1 class="text-xl font-semibold">Control Board</h1>
-
-              <button class="text-gray-500 hover:text-gray-600" id="open-sidebar">
-                <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24"
-                  xmlns="http://www.w3.org/2000/svg">
-                  <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h16">
-                  </path>
-                </svg>
-              </button>
-            </div>
-          </div>
-        </div>
-        <!-- Content Body -->
-        <div class="flex-1 overflow-auto p-4">
-          <h1 class="text-2xl mb-3 font-bold">Teachers</h1>
-          <!-- Pop-up Modal -->
-          <div id="myModal" class="modal">
-            <div class="modal-content">
-              <span id="x">X</span>
-
-
-              <label class="block text-gray-700 font-bold mb-2" for="card-number">
-                image
-              </label>
-              <input type="file" accept="image/jpeg, image/png , image/jpg" id="input-file"
-                class="mohame appearance-none border border-gray-400 rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline">
-
-
-              <label class="block text-gray-700 font-bold mb-2" for="card-number">
-                Name
-              </label>
-              <input
-                class="appearance-none border border-gray-400 rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline"
-                id="name" type="text" placeholder="Name">
-              <label class="block text-gray-700 font-bold mb-2" for="card-number">
-                Title Job
-              </label>
-              <input
-                class="appearance-none border border-gray-400 rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline"
-                id="name" type="text" placeholder="title">
-
-
-              <label class="block text-gray-700 font-bold mb-2" for="card-number">
-                Body
-              </label>
-              <input
-                class="appearance-none border border-gray-400 rounded w-full py-2 mb-10 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline"
-                id="name" type="text" placeholder="body">
-
-              <div class="flex m-[20px] justify-between">
-                <button id="doneBtn"
-                  class="m-[20px]  bg-blue-500 hover:bg-blue-600 text-white font-bold py-2 px-4 edit-btn rounded-full">Done</button>
-                <button id="closeBtn"
-                  class="bg-red-500 hover:bg-red-600 text-white font-bold py-2 px-4 rounded-full delete-btn">Close</button>
-              </div>
-            </div>
-          </div>
-
-          <div class="flex flex-col">
-            <div class="overflow-x-auto sm:mx-0.5 lg:mx-0.5">
-              <div class="py-2 inline-block min-w-full sm:px-6 lg:px-8">
-                <div class="overflow-hidden">
-                  <table class="min-w-full">
-                    <thead class="bg-white border-b">
-                      <tr>
-
-                        <th scope="col" class="text-base font-semibold text-gray-900 px-6 py-4 text-righ">
-                          Image
-                        </th>
-                        <th scope="col" class="text-base font-semibold text-gray-900 px-6 py-4 text-righ">
-                          Name
-                        </th>
-                        <th scope="col" class="text-base font-semibold text-gray-900 px-6 py-4 text-righ">
-                          Title
-                        </th>
-                        <th scope="col" class="text-base font-semibold text-gray-900 px-6 py-4 text-righ">
-                          Body
-                        </th>
-
-
-                      </tr>
-                    </thead>
-                    <tbody id="teacherList">
-                      <!-- Existing rows will be appended here -->
-                    </tbody>
-                  </table>
+<body>
+    <div class="bg-gray-100">
+        <div class="h-screen flex overflow-hidden bg-gray-200">
+            <!-- Sidebar -->
+            <div class="absolute z-50 bg-gray-800 text-white w-56 min-h-screen overflow-y-auto transition-transform transform -translate-x-full ease-in-out duration-300"
+                id="sidebar">
+                <!-- Your Sidebar Content -->
+                <div class="p-4">
+                    <h1 class="text-2xl font-semibold">ALC</h1>
+                    <ul class="mt-4">
+                        <li class="mb-2"><a href="home.html" class="block hover:text-indigo-400">Home</a></li>
+                        <li class="mb-2"><a href="courses.html" class="block hover:text-indigo-400">Courses</a></li>
+                        <li class="mb-2"><a href="teachers.html" class="block hover:text-indigo-400">Teachers</a></li>
+                        <li class="mb-2"><a href="information.html" class="block hover:text-indigo-400">Information</a>
+                        </li>
+                    </ul>
                 </div>
-              </div>
             </div>
-          </div>
+
+            <section class="flex-1 flex flex-col overflow-hidden">
+                <div class="bg-white shadow">
+                    <div class="container mx-auto">
+                        <div class="flex justify-between items-center py-4 px-2">
+                            <!-- Add Button -->
+                            <button
+                                class="bg-blue-500 hover:bg-blue-600 text-white font-bold py-2 px-4 edit-btn rounded-full newUser"
+                                data-bs-toggle="modal" data-bs-target="#userForm">New User </button>
+
+                            <h1 class="text-xl font-semibold">Control Board</h1>
+
+                            <button class="text-gray-500 hover:text-gray-600" id="open-sidebar">
+                                <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24"
+                                    xmlns="http://www.w3.org/2000/svg">
+                                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                                        d="M4 6h16M4 12h16M4 18h16">
+                                    </path>
+                                </svg>
+                            </button>
+                        </div>
+                    </div>
+                </div>
+                <div class="container mx-auto">
+                    <h1 class="text-2xl mb-3 mt-3 font-bold">Teachers</h1>
+                </div>
+                <div class="flex flex-col">
+                    <div class="overflow-x-auto sm:mx-0.5 lg:mx-0.5">
+                        <div class="py-2 inline-block min-w-full sm:px-6 lg:px-8">
+                            <div class="overflow-hidden">
+                                <table class="min-w-full">
+
+                                    <thead class="bg-white border-b">
+                                        <tr class="text-center">
+                                            <th class="text-base font-semibold text-gray-900 px-6 py-4 text-righ">S.No
+                                            </th>
+                                            <th class="text-base font-semibold text-gray-900 px-6 py-4 text-righ">
+                                                Picture
+                                            </th>
+                                            <th class="text-base font-semibold text-gray-900 px-6 py-4 text-righ">Name
+                                            </th>
+                                            <th class="text-base font-semibold text-gray-900 px-6 py-4 text-righ">Job
+                                                Title
+                                            </th>
+                                            <th class="text-base font-semibold text-gray-900 px-6 py-4 text-righ">body
+                                            </th>
+
+
+
+                                            <th class="text-base font-semibold text-gray-900 px-6 py-4 text-righ">Action
+                                            </th>
+                                        </tr>
+                                    </thead>
+
+                                    <tbody id="data">
+
+                                    </tbody>
+
+                                </table>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </section>
+
+
+
+            <div class="modal fade" id="userForm">
+
+                <div class="modal-dialog modal-dialog-centered modal-lg">
+                    <div class="caerd">
+
+                        <div class="px-6 py-4 bg-gray-900 text-white flex justify-between">
+                            <h4 class=" modal-title bg-slate-900">Fill the Form</h4>
+                            <button type="button" class=" text-white" data-bs-dismiss="modal"
+                                aria-label="Close">X</button>
+                        </div>
+
+                        <div class="">
+
+                            <form action="#" id="myForm"
+                                class="flex justify-center flex-col xl:flex-row w-[80%] mx-auto mt-4">
+
+                                <div class=" ">
+                                    <label for="imgInput" class="upload">
+                                        <input type="file" name="" id="imgInput">
+
+                                    </label>
+                                    <img src="./image/Profile Icon.webp" alt="" width="200" height="200" class="img ">
+                                </div>
+
+                                <div class="inputField">
+
+                                    <div>
+                                        <label for="name" class="block text-gray-700 font-bold mb-2">Name:</label>
+                                        <input type="text" name="" id="name" required
+                                            class="appearance-none border border-gray-400 rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline">
+                                    </div>
+                                    <div>
+                                        <label for="age" class="block text-gray-700 font-bold mb-2">Title:</label>
+                                        <input type="text" name="" id="title" required
+                                            class="appearance-none border border-gray-400 rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline">
+                                    </div>
+                                    <div>
+                                        <label for="city" class="block text-gray-700 font-bold mb-2">Body:</label>
+                                        <input type="text" name="" id="city" required
+                                            class="appearance-none border border-gray-400 rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline">
+                                    </div>
+
+
+
+
+                                </div>
+
+                            </form>
+
+                        </div>
+
+                        <div class="modal-footer">
+                            <button type="button"
+                                class="  bg-red-500 hover:bg-red-600 text-white font-bold py-2 px-4 rounded-full"
+                                data-bs-dismiss="modal">Close</button>
+                            <button type="submit" form="myForm"
+                                class="m-[20px]  bg-blue-500 hover:bg-blue-600 text-white font-bold py-2 px-4 edit-btn rounded-full submit">Submit</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <!--Read Data Modal-->
+
         </div>
-
-      </div>
-
-
     </div>
 
-
-
+    <!-- Option 1: Bootstrap Bundle with Popper -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+        crossorigin="anonymous"></script>
 
     <script>
-      let i = document.querySelector(".mohame")
-      let img = document.querySelector(".khaled")
-      // img.src = "image/khaled.jpg";
-      function myFunction() {
-        img.src = `${URL.createObjectURL(i.files[ 0 ])}`;
-      }
+        const sidebar = document.getElementById('sidebar');
+        const openSidebarButton = document.getElementById('open-sidebar');
 
-      // Function to handle delete button click
-      function handleDeleteButtonClick(event) {
-        const row = event.target.closest('tr');
-        row.remove();
-      }
+        openSidebarButton.addEventListener('click', (e) => {
+            e.stopPropagation();
+            sidebar.classList.toggle('-translate-x-full');
+        });
 
-      function addDeleteButtonListener(row) {
-        const deleteButton = row.querySelector('.delete-btn');
-        deleteButton.addEventListener('click', handleDeleteButtonClick);
-      }
-
-      function addRow(imageSrc, name, title, body) {
-        const tableBody = document.getElementById('teacherList');
-        const newRow = document.createElement('tr');
-        newRow.className = 'bg-gray-100 border-b';
-        imageSrc = URL.createObjectURL(i.files[ 0 ])
-        newRow.innerHTML = `
-          <td class="text-base font-medium text-gray-900 px-6 py-4 text-center whitespace-nowrap"><img src="${imageSrc}" alt="Image" class=" w-12 h-12 m-auto rounded-[50%]"></td>
-          <td class="text-base font-medium text-gray-900 px-6 py-4 text-center whitespace-nowrap">${name}</td>
-          <td class="text-base font-medium text-gray-900 px-6 py-4 text-center whitespace-nowrap">${title}</td>
-          <td class="text-base font-medium text-gray-900 px-6 py-4 text-center whitespace-nowrap overflow-hidden w-[300px]"> <p class="w-[300px] wh text-center">${body}</p></td>
-          <td class="text-base font-medium text-gray-900 px-6 py-4 text-center whitespace-nowrap">
-            <button class="bg-blue-500 hover:bg-blue-600 text-white font-bold py-2 px-4 edit-btn rounded-full"><a href="#">Edit</a></button>
-            <button class="bg-red-500 hover:bg-red-600 text-white font-bold py-2 px-4 rounded-full delete-btn"><a href="#">Delete</a></button>
-          </td>
-        `;
-        tableBody.appendChild(newRow);
-        addDeleteButtonListener(newRow);
-      }
-      document.getElementById('doneBtn').addEventListener('click', function () {
-        const input1Value = document.querySelector('#myModal input:nth-of-type(1)').value;
-        const input2Value = document.querySelector('#myModal input:nth-of-type(2)').value;
-        const input3Value = document.querySelector('#myModal input:nth-of-type(3)').value;
-        const input4Value = document.querySelector('#myModal input:nth-of-type(4)').value;
-        addRow(input1Value, input2Value, input3Value, input4Value);
-        document.getElementById('myModal').style.display = "none";
-      });
-
-      // Function to open sidebar
-      const sidebar = document.getElementById('sidebar');
-      const openSidebarButton = document.getElementById('open-sidebar');
-      openSidebarButton.addEventListener('click', (e) => {
-        e.stopPropagation();
-        sidebar.classList.toggle('-translate-x-full');
-      });
-
-      // Function to close sidebar when clicking outside of it
-      document.addEventListener('click', (e) => {
-        if (!sidebar.contains(e.target) && !openSidebarButton.contains(e.target)) {
-          sidebar.classList.add('-translate-x-full');
-        }
-      });
-
-      // Function to open modal
-      document.getElementById('open-modal').addEventListener('click', function () {
-        document.getElementById('myModal').style.display = "block";
-      });
-
-      // Function to close modal
-      document.getElementById('x').addEventListener('click', function () {
-        document.getElementById('myModal').style.display = "none";
-      });
-
-      document.getElementById('closeBtn').addEventListener('click', function () {
-        document.getElementById('myModal').style.display = "none";
-      });
-
-
+        // Close the sidebar when clicking outside of it
+        document.addEventListener('click', (e) => {
+            if (!sidebar.contains(e.target) && !openSidebarButton.contains(e.target)) {
+                sidebar.classList.add('-translate-x-full');
+            }
+        });
     </script>
-
-  </div>
-  </script>
+    <script src="app.js"></script>
 </body>
 
 </html>
